# kdegames

./: AUTHORS  CMakeLists.txt  CTestConfig.cmake  Mainpage.dox  README  README.PACKAGERS
bomber/pictures/: hisc-app-bomber.svgz
bomber/themes/: Lava-Island.svgz  kbomber.svgz
cmake/modules/: CMakeLists.txt  FindLibKDEGames.cmake  GGZ.cmake
doc/: CMakeLists.txt
doc/ksame/: index.docbook
granatier/players/: player1.svgz  player1_preview.svgz  player2.svgz  player2_preview.svgz  player3.svgz  player3_preview.svgz  player4.svgz  player4_preview.svgz  player5.svgz  player5_preview.svgz
granatier/src/: block.cpp
granatier/themes/: clanbomber.svgz  granatier.svgz  waterbomb.svgz
kblackbox/: kbbgraphicsitemball.h
kbounce/themes/: Roads.svgz  default_theme.svgz  egyptian_bounce.svgz  oxygen.svgz  the_beach.svgz
kbreakout/themes/: IceWorld.svgz  alienbreakout.svgz  crystal.svgz  default.svgz  egyptian_desert_test.svgz  egyptianbreakout.svgz  simple.svgz  web20.svgz
kigo/src/gui/widgets/: gamewidget.h
klines/themes/: egyptian.svgz  klines-gems.svgz  klines_crystal.svgz  metal.svgz
konquest/pics/: default_theme.svgz
kpat/patsolve/: clock.h
kreversi/pics/: default_theme.svgz
ksame/: CMakeLists.txt  Messages.sh  board.cpp  board.h  default_theme.desktop  default_theme.svgz  ksame.desktop  ksameui.rc  main.cpp  mainwindow.cpp  mainwindow.h  old_theme.svgz  renderer.cpp  renderer.h  view.cpp  view.h
ksirk/ksirk/: hics-app-ksirk.svgz  mainMenu.h
kspaceduel/: default_theme.svgz
ksudoku/src/gui/views/: ArcBall.cpp  ArcBall.h
ksudoku/src/shapes/: ksudoku-4x4.svgz  ksudoku-jigsaw.svgz  ksudoku-ksudoku_16x16.svgz  ksudoku-ksudoku_25x25.svgz  ksudoku-roxdoku_3x3x3.svgz  ksudoku-roxdoku_4x4x4.svgz  ksudoku-roxdoku_5x5x5.svgz  ksudoku-samurai.svgz  ksudoku-tiny_samurai.svgz  ksudoku-xsudoku.svgz
ktron/themes/: default.svgz
ktuberling/museum/: happy.tuberling
kubrick/themes/: default.svgz
libkdegames/carddecks/decks/: deck1.svgz  deck10.svgz  deck11.svgz  deck12.svgz  deck13.svgz  deck14.svgz  deck15.svgz  deck16.svgz  deck17.svgz  deck18.svgz  deck2.svgz  deck25_dondorf.svgz  deck27_classic.svgz  deck28_oxygen.svgz  deck3.svgz  deck4.svgz  deck5.svgz  deck6.svgz  deck7.svgz  deck9.svgz  deck_old.svgz
libkdegames/carddecks/svg-ancient-egyptians/: Ancient_Egyptians.svgz
libkdegames/carddecks/svg-dondorf/: dondorf.svgz
libkdegames/carddecks/svg-future/: future.svgz
libkdegames/carddecks/svg-gm-paris/: paris.svgz
libkdegames/carddecks/svg-jolly-royal/: jolly-royal.svgz
libkdegames/carddecks/svg-konqi-modern/: konqi.svgz
libkdegames/carddecks/svg-nicu-ornamental/: ornamental.svgz
libkdegames/carddecks/svg-nicu-white/: white.svgz
libkdegames/carddecks/svg-oxygen/: oxygen.svgz
libkdegames/carddecks/svg-oxygen-air/: oxygen-air.svgz
libkdegames/carddecks/svg-oxygen-white/: oxygen-white.svgz
libkdegames/carddecks/svg-penguins/: penguins.svgz
libkdegames/carddecks/svg-standard/: standard.svgz
libkdegames/carddecks/svg-tigullio-international/: tigullio-international.svgz
libkdegames/carddecks/svg-xskat-french/: french.svgz
libkdegames/carddecks/svg-xskat-german/: german.svgz
libkmahjongg/backgrounds/: chinese_landscape.svgz  egyptian.svgz
libkmahjongg/tilesets/: alphabet.svgz  bamboo.svgz  default.svgz  egypt.svgz  jade.svgz  traditional.svgz
palapeli/src/: palapeliui.rc
palapeli/src/engine/: shadowitem.h
palapeli/src/file-io/: visual-documentation.svgz
